Add prediction logging and suggestion for next drink amount - This is WIP, tha plan is to use this data to improve the predictions.
